# AISimpleRAG

./: .env.example  .gitignore  QA.sql  README.md  main.py  pyproject.toml  vectordb-analysis.md  zzinstructions.txt
.chroma/: chroma.sqlite3
aisimplerag/: __init__.py  app.py
aisimplerag/api/: router.py  schemas.py
aisimplerag/core/: config.py  logging.py
aisimplerag/db/: __init__.py  session.py  store.py
aisimplerag/db/models/: __init__.py  qa.py
aisimplerag/db/repositories/: __init__.py  qa_repository.py
aisimplerag/services/: __init__.py  embedding.py  ollama.py  openai.py  rag.py  retrieval.py
data/: RAG_questions.json  qa.json
docs/: design-spec.md  plan-qaRagSpec.prompt.md  task-list.md
tests/: test_api_crud.py  test_embedding_regeneration.py  test_provider_switching.py  test_rag_response.py  test_retrieval_behavior.py  test_vector_store_backend.py
