[project]
name = "aisimplerag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.116.0",
	"uvicorn[standard]>=0.35.0",
	"pydantic-settings>=2.10.1",
	"sqlalchemy>=2.0.42",
	"psycopg[binary]>=3.2.9",
	"pgvector>=0.3.4",
	"chromadb>=0.5.0,<1.5.0",
	"onnxruntime>=1.22,<1.24",
	"sentence-transformers>=3.0.1",
	"httpx>=0.28.1",
	"pytest>=8.3.2",
]
